# proc-macro

./: Cargo.toml  README-template.md  README.md  cargo-generate.toml  check-macro-name.rhai  config-readme.rhai  config-ui-tests.rhai
src/: lib.rs
tests/: ui.rs
tests/ui/: some_error.rs
{{project-name}}-core/: Cargo.toml  README.md
{{project-name}}-core/src/: lib.rs
{{project-name}}-macro/: Cargo.toml
{{project-name}}-macro/src/: lib.rs
