[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]

[dependencies]
{{project-name}}-macro = { path = "{{project-name}}-macro", version = "0.1.0" }

{% if include_tests -%}
[dev-dependencies]
trybuild = "1"

{% endif -%}
[workspace]
members = ["{{project-name}}-core", "{{project-name}}-macro"]
