[package]
name = "{{project-name}}-macro"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
{% if include_error -%}
proc-macro-error = { version = "1", default-features = false }
{% endif -%}
{{project-name}}-core = { path = "../{{project-name}}-core", version = "0.1.0" }
